[tool.poetry]
name = "ns0"
version = "0.1.0"
description = "A cloud native Nameserver"
authors = ["Fabian Peter <fabian@peter.saarland>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
logzero = "^1.5.0"
docker = "^4.2.0"
dns-lexicon = "^3.3.19"
tldextract = "^2.2.2"
dnspython = "^1.16.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pylint = "^2.4.4"
coverage = "^5.1"
pycodestyle = "^2.5.0"
python-coveralls = "^2.9.3"
pytest = "^5.4.1"
black = {version = "^19.10b0", allow-prereleases = true}
commitizen = "^1.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
